# Dash-Standalone-Boilerplate

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
src/dnb/: domino.py  main.py  server.py
